# dxn

./: .gitignore  Framework.md  LICENSE  README.md  SCRIPT_MIGRATION.md  Swimlanes.Security.md  Swimlanes.md  api-spec.md  config.json  config.json.delete  dxn-setup-todo.md  function_architecture.md  landing-content.md  plan.md  private.db  public.db  service_architecture.md  system.db  todo.md
docs/: dxn-setup-handoff.md
dxn-core/: .dxn-core-state.json  .dxn-setup-lock.json  .sa-identity.json  Cargo.toml  config.json  config.v0.json  config.v1.json  example.sa-identity.json  person.db  persons.db  public.db  readme.md  test_config_invalid.json  test_config_mismatch.json
dxn-core/.dxn-keystore-seed/: manifest.json  secrets.seed
dxn-core/_files/functions/: greet.ts
dxn-core/_files/logs/server/: log_2025-12-03.txt  log_2025-12-04.txt  log_2025-12-05.txt
dxn-core/_files/routes/: global.layout.html  tester.html
dxn-core/dxn-files/_files/logs/server/: log_2026-02-28.txt  log_2026-03-14.txt  log_2026-03-23.txt
dxn-core/dxn-files/db-backup/: test_approval_20260328_210158.db.backup  test_data_persistence_20260328_212539.db.backup  test_migration_v2_20260328_212539.db.backup  test_multiple_migrations_20260328_210158.db.backup  test_multiple_migrations_20260328_212539.db.backup  test_rollback_20260328_210158.db.backup  test_rollback_20260328_212539.db.backup
dxn-core/src/: main.rs
dxn-core/src/data/: mod.rs  models.rs
dxn-core/src/data/db/: mod.rs  models.rs  sqlite.old.rs  sqlite.rs
dxn-core/src/data/db/sqlite/: migrations.rs  mod.rs  repository.rs  repository.test.rs  repository_events.rs  repository_events.test.rs  repository_files.rs  repository_files.test.rs  repository_schema.rs  repository_schema.test.rs
dxn-core/src/files/: manager.rs
dxn-core/src/functions/: executors.rs  manager.rs  mod.rs  models.rs  runner.OBSOLETE.rs  typescript.rs
dxn-core/src/integrations/: compiler.rs  constants.rs  manager.rs  mod.rs  models.rs  new_manager.rs
dxn-core/src/integrations/service_mesh/: client.rs  discovery.rs  health.rs  registry.rs  router.rs
dxn-core/src/serialization/: json.rs
dxn-core/src/server/: constants.rs  mod.rs  models.rs
dxn-core/src/server/http/controllers/: data.old.rs  data.rs  server.rs
dxn-core/src/system/: config_root.rs  core_state.rs  keystore_ingest.rs  logger.rs  mod.rs  models.rs  setup_lock.rs  vault_verify.rs
dxn-core/src/system/auth/: controller.rs  middleware.rs  mod.rs  sa_identity.rs  token.rs  verify.rs
dxn-core/src/system/files/: dxn_files.rs  manager.rs  manager.test.rs  mod.rs  project_root.rs
dxn-core/src/system/files/providers/: local.rs  mod.rs
dxn-core/src/system/keystore/: manager.rs  mod.rs
dxn-core/src/system/keystore/providers/: mod.rs  securestore.rs
dxn-core/src/system/serialization/: json.rs  json.test.rs
dxn-core/src/system/server/: constants.rs  models.rs
dxn-core/src/system/server/http/: mod.rs
dxn-core/src/system/server/http/controllers/: config.rs  config.test.rs  data.old.rs  data.rs  data.test.rs  events.rs  files.rs  function.rs  function.test.rs  mod.rs  schema.rs  server.rs  server.test.rs
dxn-core/src/utilities/: mod.rs
dxn-files/integrations.old/example-tcp/: Cargo.toml
dxn-files/integrations/example/: Cargo.toml
dxn-files/integrations/example/src/: main.rs
dxn-files/integrations/llm/: Cargo.toml
dxn-files/markdown/: readme.md
dxn-files/routes/: global.layout.html  home.html  subpage.html
dxn-files/scripts/: wallet_transform.ts
dxn-files/server/: home.html  subpage.html  tester.html
dxn-functions/: Cargo.toml
dxn-functions/src/: lib.rs
dxn-native-wallet/: Cargo.toml
dxn-native-wallet/src/: lib.rs
dxn-remote-ai/: Cargo.toml
dxn-remote-ai/src/: main.rs
dxn-shared/: Cargo.toml
dxn-shared/src/: lib.rs  wasm_memory.rs
dxn-wasm-parser/: Cargo.toml
dxn-wasm-parser/src/: lib.rs
dxn-wasm-template/: Cargo.toml  README.md
dxn-wasm-template/src/: lib.rs
dxn-wasm-wallet/: Cargo.toml
dxn-wasm-wallet/src/: lib.rs
dxn_public/dxn_functions/: Cargo.toml  readme.md
dxn_public/dxn_functions/src/: lib.rs
dxn_public/routes/: home.html  post.md
dxn_shared/: Cargo.toml
dxn_shared/src/: lib.rs
z.documents/: CQRS.md  FUNCTION_EXAMPLES.md  HOSTING.MD  SCRIPT_MIGRATION.md  api-spec.md  data-api-contract-for-mobile.md  dxn-core-init-flow.md  dxn-setup-flow.md  dxn-setup-spec.md  encryption-plan.md  federated-vault-plan.md  function_architecture.md
(+22 files in other folders)
