[package]
name = "dxn_core"
version = "0.0.2"
edition = "2021"
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-web = "4.12.0"
actix-server = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
serde_rusqlite = { version = "0.40.1" }
chrono = "0.4"
dxn_proc_macros = { path = "../dxn_proc_macros" }
dxn_shared = { path = "../dxn-shared" }
tokio = { version = "1.48.0", features = ["full"] }
wasmtime = { version="39.0.1" }
anyhow = "1.0"
libloading = "0.8"
reqwest = { version = "0.12", features = ["json"] }
wasm-bindgen = "0.2"
handlebars = "5.1"

[features]
default = []
script-support = ["rquickjs", "swc_common", "swc_ecma_parser", "swc_ecma_transforms", "swc_ecma_codegen"]

[dependencies.rquickjs]
version = "0.3"
optional = true

[dependencies.swc_common]
version = "1"
optional = true

[dependencies.swc_ecma_parser]
version = "1"
features = ["typescript"]
optional = true

[dependencies.swc_ecma_transforms]
version = "1"
features = ["typescript"]
optional = true

[dependencies.swc_ecma_codegen]
version = "1"
optional = true

[dependencies.rusqlite]
version = "0.37.0"
features = ["bundled"]

