[package]
name = "dxn-remote-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dxn_shared = { path = "../dxn-shared" }
tokio = { version = "1.48.0" }

[[bin]]
name = "dxn-remote-ai"
path = "src/main.rs"

