[package]
name = "dxn-wasm-template"
version = "0.1.0"
edition = "2021"
description = "Template example for creating DXN WASM functions"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dxn_shared = { path = "../dxn-shared" }

[lib]
crate-type = ["cdylib", "rlib"]

