[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
env = { version="1.0.1" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "io-util", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

dxn_shared = { path = "../../../../dxn_shared" }
